# ISOFORGE

./: .gitmodules  CMakeLists.txt  ISOFORGEconfig.h.in  LICENSE.md  README.md  note.txt
COMPILER/: file.cpp  file.h  main.cpp
TEST/: ISOFORGE.json
deploymentFiles/Archs/x32-64/: ISA.txt
